--- a/public/frontend/css/video.css
+++ b/public/frontend/css/video.css
@@ -69,7 +69,7 @@ h6 {
 
 .timeline {
     border-left: 3px solid #BBBBBB;
-    margin-left: 110px;
+    margin-left: 53px;
     padding-left: 25px;
 }
 
@@ -106,8 +106,8 @@ h6 {
 
 .blog-post .blog-info {
     position: absolute;
-    left: 15px;
-    margin-top: -50px;
+    left: 34px;
+    margin-top: -26px;
     width: 70px;
     background-color: #ffffff;
     box-shadow: 0 0 2px 1px rgb(0 0 0 / 20%);
@@ -143,7 +143,7 @@ h6 {
 
 .box {
     background-color: #FFFFFF;
-    padding: 10px 20px;
+    padding: 8px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
