--- a/public/frontend/css/arabic.css
+++ b/public/frontend/css/arabic.css
@@ -3,6 +3,7 @@ body {
     text-align: right;
     font-family: 'Almarai', sans-serif;
     font-family: 'Readex Pro', sans-serif;
+    display: initial;
 }
 
 .header.shop .right-bar .sinlge-bar {
