--- a/public/frontend/css/responsive.css
+++ b/public/frontend/css/responsive.css
@@ -31,7 +31,7 @@ Version:1.0
         padding: 45px 0 0px 0;
     }
     .breadcrumbs {
-        padding: 20px 0;
+        padding: 60px 0 26px 0;
     }
     .blog-single.grid .pagination {
         float: none;
@@ -344,7 +344,7 @@ Version:1.0
 
 @media only screen and (max-width: 767px) {
     .breadcrumbs {
-        padding: 90px 0 90px;
+        padding: 60px 0 26px 0;
     }
     .breadcrumbs h2 {
         font-size: 28px;
@@ -505,7 +505,7 @@ Version:1.0
         font-size: 13px;
     }
     .breadcrumbs {
-        padding: 20px 0;
+        padding: 60px 0 26px 0;
     }
     .header.shop .topbar .top-left {
         text-align: center;
@@ -1204,7 +1204,7 @@ Version:1.0
         font-size: 13px;
     }
     .breadcrumbs {
-        padding: 20px 0;
+        padding: 60px 0 26px 0;
     }
     .header.shop .topbar {
         background: var(--dark);
